@@ -51,6 +51,7 @@
 36. Fix local file playback on remote MPD when MPD's curl is using IPv6.
 37. Install symbolic icon for GNOME shell.
 38. Add sort by track title to playqueue.
+39. Read lyrics from MP4 files.
 
 2.0.1
 -----
